2008-10-28  Jaroslav Hajek <highegg@gmail.com>

	* Array-C.cc Array-d.cc Array-f.cc Array-fC.cc Array-i.cc Array-s.cc:
	Don't use semicolon after INSTANTIATE_ARRAY_ASSIGN.
	* Array-util.h (zero_dims_inquire): New declarations.
	(is_in, how_many_lgt, short_freeze): Remove declarations.
	* Array-util.cc (zero_dims_inquire): New functions.
	(is_in, how_many_lgt, short_freeze): Remove functions.
	* Array.cc (Array<T>::index, Array<T>::resize_fill, Array<T>::resize,
	Array<T>::assign, Array<T>::delete_elements):
	Rewrite.
	* Array.h (Array<T>::index, Array<T>::resize_fill, Array<T>::resize,
	Array<T>::assign, Array<T>::delete_elements):
	Rewrite interfaces.
	* Array2.h (Array2<T>::resize): Call Array<T>::resize_fill.
	* Array3.h (Array3<T>::resize): Call Array<T>::resize_fill.
	* ArrayN.h (ArrayN<T>::resize): Remove declarations.
	(ArrayN<T>::index): Fix call to resize_fill_value.
	* Sparse.cc (assign, assign1): Use zero-based indices.
	* chMatrix.h: Include mx-op-defs.h
	* dim-vector.h (dim_vector::any_neg, dim_vector::chop_all_singletons,
	dim_vector::redim): New member functions.
	* idx-vector.cc: Mostly rewrite.
	* idx-vector.h: Mostly rewrite.

2008-10-29  Michael Goffioul  <michael.goffioul@gmail.com>

	* lo-specfun.cc (cbesj, cbesy, cbesi, cbesk, cbesh1, cbesh2): Do not
	use std::complex::real() and std::complex::imag() as l-value, this is
	not supported under MSVC.

2008-10-28  John W. Eaton  <jwe@octave.org>

	* lo-specfun.cc: Fix prototypes for the Fortran subroutines cbesh,
	cbesi, cbesj, cbesk, and cbesy.
	(cbesh, cbesi, cbesj, cbesk, cbesy): Fix calls to Fortran
	subroutines.

2008-10-28  Brian Gough  <bjg@gnu.org>

	* lo-specfun.cc (zbesi): Fix scaling factor for negative alpha.
	(cbesi): Likewise.

2008-10-23  John Swensen  <jpswensen@comcast.net>

	* oct-shlib.cc (octave_dyld_shlib::open): Call NSLinkEditError to
	get better diagnostic if NSLinkModule fails.

2008-10-23  John W. Eaton  <jwe@octave.org>
